Add Comandos de Música e Java 11
Adicionando Comandos básicos de Música, comandos de interação, reformulação de comandos gerais e upgrade para JDK 11.